crates/syntax/src/snapshots/fails/syntax__tests__fails@assign.snap
---
source: crates/syntax/src/lib.rs
expression: "dump_parse(Program::parse(&input))"

---
Program@0..15
  Stmt@0..15
    AssignStmt@0..15
      LocalKw@0..5 "local"
      Whitespace@5..6 " "
      Name@6..10
        Ident@6..10 "expr"
      Whitespace@10..11 " "
      Eq@11..12 "="
      Whitespace@12..13 " "
      ParenExpr@13..15
        LParen@13..14 "("
        Literal@14..15
          Number@14..15 "5"

=============================
Errors:
=============================
[SyntaxError("Expected RParen, got Eof", 15..15)]
