crates/syntax/src/snapshots/fails/syntax__tests__fails@call_without_parens.snap
---
source: crates/syntax/src/tests.rs
expression: dump_parse(parse)

---
Program@0..31
  LocalAssignStmt@0..30
    LocalKw@0..5 "local"
    Whitespace@5..6 " "
    MultiName@6..11
      Name@6..11
        Ident@6..11 "hello"
    Whitespace@11..12 " "
    Eq@12..13 "="
    Whitespace@13..14 " "
    MultivalExpr@14..30
      CallExpr@14..30
        FunctionExpr@14..28
          FunctionKw@14..22 "function"
          Paramlist@22..24
            LParen@22..23 "("
            RParen@23..24 ")"
          Whitespace@24..25 " "
          Block@25..25
          EndKw@25..28 "end"
        Arglist@28..30
          LParen@28..29 "("
          RParen@29..30 ")"
  Whitespace@30..31 "\n"

=============================
Errors:
=============================
[]
