crates/syntax/src/snapshots/fails/syntax__tests__fails@can_call.snap
---
source: crates/syntax/src/lib.rs
expression: "dump_parse(Program::parse(&input))"

---
Program@0..9
  Error@0..2
    Str@0..2 "\"\""
  CallExprStmt@2..4
    ParenExpr@2..4
      LParen@2..3 "("
      Error@3..4
        RParen@3..4 ")"
  Whitespace@4..5 "\n"
  Error@5..6
    Number@5..6 "5"
  CallExprStmt@6..8
    ParenExpr@6..8
      LParen@6..7 "("
      Error@7..8
        RParen@7..8 ")"
  Whitespace@8..9 "\n"

=============================
Errors:
=============================
[
    SyntaxError(
        "Expected a statement",
        0..0,
    ),
    SyntaxError(
        "Expected a statement",
        0..2,
    ),
    SyntaxError(
        "Expected an expression",
        3..3,
    ),
    SyntaxError(
        "Expected an expression",
        3..4,
    ),
    SyntaxError(
        "Expected RParen, got Number",
        4..4,
    ),
    SyntaxError(
        "Expected a statement",
        5..5,
    ),
    SyntaxError(
        "Expected a statement",
        5..6,
    ),
    SyntaxError(
        "Expected an expression",
        7..7,
    ),
    SyntaxError(
        "Expected an expression",
        7..8,
    ),
    SyntaxError(
        "Expected RParen, got Eof",
        8..8,
    ),
]
