crates/syntax/src/snapshots/fails/syntax__tests__fails@cannot_call_literal.snap
---
source: crates/syntax/src/tests.rs
expression: dump_parse(parse)

---
Program@0..5
  Error@0..2
    Str@0..2 "\"\""
  ExprStmt@2..4
    MultivalExpr@2..4
      ParenExpr@2..4
        LParen@2..3 "("
        Error@3..4
          RParen@3..4 ")"
  Whitespace@4..5 "\n"

=============================
Errors:
=============================
[
    SyntaxError(
        "Expected a statement",
        0..0,
    ),
    SyntaxError(
        "Expected a statement",
        0..2,
    ),
    SyntaxError(
        "Expected an expression",
        3..3,
    ),
    SyntaxError(
        "Expected an expression",
        3..4,
    ),
    SyntaxError(
        "Expected RParen, got Eof",
        4..4,
    ),
]
