crates/syntax/src/snapshots/fails/syntax__tests__fails@missing_paren.snap
---
source: crates/syntax/src/tests.rs
expression: dump_parse(parse)

---
Program@0..16
  AssignStmt@0..15
    LocalKw@0..5 "local"
    Whitespace@5..6 " "
    MultiName@6..10
      Name@6..10
        Ident@6..10 "expr"
    Whitespace@10..11 " "
    Eq@11..12 "="
    Whitespace@12..13 " "
    MultivalExpr@13..15
      ParenExpr@13..15
        LParen@13..14 "("
        Literal@14..15
          Number@14..15 "5"
  Whitespace@15..16 "\n"

=============================
Errors:
=============================
[
    SyntaxError(
        "Expected RParen, got Eof",
        15..15,
    ),
]
